


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="co.mobilemakers.yourownadventure.Alley">

    <TextView android:text="@string/text_message_roomYou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_message"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:id="@+id/alley_layout" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_enter_door_1"
            android:id="@+id/button3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_enter_door_2"
            android:id="@+id/button4" />
    </LinearLayout>


</LinearLayout>
